First step of bash script refactoring. NB JMX short option is now -k1099. Can anyone check to see if it behaves like earlier?
svn path=/trunk/eXist/; revision=6192


Former-commit-id: 6e86bee7ed9dd3929d3bf8aa0506c409cb934542